force-app/main/default/objects/ampi__SetTargets__c/ampi__SetTargets__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Set Targets</label>
</CustomObject>