force-app/main/default/objects/ampi__SetTargets__c/fields/ampi__Excel_Upload_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ampi__Excel_Upload_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excel Upload Enabled?</label>
    <type>Checkbox</type>
</CustomField>