force-app/main/default/objects/ampi__SetTargets__c/fields/ampi__Hide_Comments_Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Comments_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Comments Icon</label>
    <type>Checkbox</type>
</CustomField>