force-app/main/default/objects/ampi__SetTargets__c/fields/ampi__Hide_Download_Excel_Button__c.field-meta.xml
<CustomField>
    <fullName>ampi__Hide_Download_Excel_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Download Excel Button</label>
    <type>Checkbox</type>
</CustomField>