force-app/main/default/objects/ampi__SetTargets__c/fields/ampi__View_Only_Mode__c.field-meta.xml
<CustomField>
    <fullName>ampi__View_Only_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Only Mode</label>
    <type>Checkbox</type>
</CustomField>